# Illegal-Dumping-Detection

./: .dockerignore  .gitattributes  .gitignore  Dockerfile  README.md  graders.py  inference.py  live_demo.py  main.py  openenv.yaml  pyproject.toml  requirements.txt  start_monitor.bat
.github/workflows/: deploy-aws.yml
ai_service/: README.md  best.pt  camera.py  detector.py  evaluator.py  garbage_env.py  inspect_best_pt.py  live_monitor.py  main.py  start_monitor.bat  stream_server.py  tasks.py  test.py  utils.py  vision_service.py  whatsapp_notifier.py
backend/: .env.example  Dockerfile  package-lock.json  package.json  server.js  test_db.js
backend/.wwebjs_auth/session/: DevToolsActivePort  (+3 more)
backend/.wwebjs_cache/: 2.3000.1039651969.html  2.3000.1039673335.html  2.3000.1039674428.html  2.3000.1039675588.html  2.3000.1039676929.html  2.3000.1039689052.html  2.3000.1039690113.html  2.3000.1039691735.html  2.3000.1039693732.html
backend/middleware/: audit.js  auth.js  upload.js
backend/models/: AuditLog.js  Detection.js  Report.js  Task.js  User.js
backend/routes/: analytics.js  audit.js  auth.js  cctv.js  detections.js  reports.js  tasks.js  users.js
backend/services/: aiService.js  notificationService.js  socketService.js  whatsappService.js
backend/uploads/: .gitkeep
backend/utils/: helpers.js  seed.js
frontend/: .env.example  index.html  package-lock.json  package.json  vercel.json  vite.config.js
frontend/src/: App.jsx  index.css
scripts/: api_video_demo.py  ec2-setup.sh  export_model.py  inference.py  live_demo.py
server/: app.py
(+111 files in other folders)
